Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.2.1
-
None
-
OSX 10.9
-
-
7aec099ca3cbc3f04562db027dc88f29e7ca28e4
Description
Run the sample. Resize the window with the mouse. Click inside the window -> Q_ASSERT is triggered because isMaximized is still true.
This is bad because the isMaximized state is saved with saveGeometry(). This means that in many cases, saveGeometry/restoreGeometry won't produce the expected result when non-maximized windows are to be restored.
This is a regression compared to 4.8
Attachments
Issue Links
- relates to
-
QTBUG-35166 To and fro Maximize and FullScreen mode transitions detours through or stop at WindowNoState/NormalMode state.
-
- Closed
-