OSX: a window can be de-maximized by resizing

After that, QWidget::isMaximized() should return false.

Task-number: QTBUG-37703
Change-Id: Ic8b0de63ab007066cd277f511dfaa969404ff069
Reviewed-by: Gabriel de Dietrich <gabriel.dedietrich@digia.com>